use ng2-bootstrap

--- a/prdemo/src/index.html
+++ b/prdemo/src/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>采购申请 - angular2, bootstrap, asp.net mvc, webapi</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
     <link rel="stylesheet" 
       href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+    
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="forms.css">
   
